--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -26,6 +26,17 @@
       <h2>{{ course.short_description }}</h2>
         <p>{{ course.description }}</p>
     </div>
+    <h3>Преподаватели</h3>
+      <h6>Учитель</h6>
+      <div class="block"> 
+        <p><a href="{% url 'coaches:detail' course.coach %}">{{ course.coach }}</a></p>
+        <p>{{ course.coach.description }}</p>
+      </div>
+      <h6>Ассистент</h6>
+      <div class="block"> 
+        <p><a href="{% url 'coaches:detail' course.assistant %}">{{ course.assistant }}</a></p>
+        <p>{{ course.assistant.description }}</p>
+      </div>
     <h3>План курса</h3>
       <table>
         <tr>
