--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Django course</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/my_style.css">
-    <script src="/static/js/jquery-3.4.1.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    <style type="text/css">
-    </style>
-  </head>
-  <body>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Main</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'contact' %}">Contacts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'students:list_view' %}">Students</a>
-      </li>      
-    </ul>
-    <div class="block"> 
-      <h1>Django course from beginner to pro</h1>
-      <h2>Course description</h2>
-        <p>This course will teach you basics of web-development using popular framework Django</p>
-    </div>
+{% extends "base.html" %}
+
+{% block title %}Django course{% endblock %}
+
+
+{% block active_main %}active{% endblock %}
+
+
+{% block content %}
+
+
+{% include "include/main_title_include.html" with block_title="Django course from beginner to pro" block_short_desc="Course description" block_full_desc="This course will teach you basics of web-development using popular framework Django" %}  
     <h3>Program</h3>
       <table>
         <tr>
           <th>Курс</th><th>Описание</th>
         </tr>
         {% for course in courses %}
-        <tr><td>{{ course.name }}</td><td><a href="{% url 'courses:detail' course.name %}">{{ course.short_description }}</a></td></tr>
+        <tr><td>{{ course.name|upper }}</td><td><a href="{% url 'courses:detail' course.name %}">{{ course.short_description|title }}</a></td></tr>
         {% endfor %}
       </table>
-  </body>  
+{% endblock content %}
