--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,29 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ student.surname }} {{ student.name }}</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/my_style.css">
-    <script src="/static/js/jquery-3.4.1.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    <style type="text/css">
-    </style>
-  </head>
-  <body>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Main</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'contact' %}">Contacts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'students:list_view' %}">Students</a>
-      </li>  
-    </ul>
+{% extends "base.html" %}
+
+{% block title %}{{ course.name }}{% endblock %}
+
+
+{% block content %}
     <h3>{{ coach.user.first_name }} {{ coach.user.last_name }}</h3>
       <table>
-        <tr><td>дата рождения</td><td>{{ coach.date_of_birth }}</td></tr>
+        <tr><td>дата рождения</td><td>{{ coach.date_of_birth|date:"d F, Y" }}</td></tr>
         <tr><td>адрес</td><td>{{ coach.address }}</td></tr>
         <tr><td>почта</td><td>{{ coach.email }}</td></tr>
         <tr><td>логин skype</td><td>{{ coach.skype }}</td></tr>
@@ -47,4 +30,4 @@
           </td>          
         </tr>
       </table>
-  </body>  
+{% endblock content %}
