--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ student.surname }} {{ student.name }}</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/my_style.css">
-    <script src="/static/js/jquery-3.4.1.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    <style type="text/css">
-    </style>
-  </head>
-  <body>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Main</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'contact' %}">Contacts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'students:list_view' %}">Students</a>
-      </li>  
-    </ul>
+{% extends "base.html" %}
+
+{% block title %}{{ student.surname }} {{ student.name }}{% endblock %}
+
+
+{% block active_students %}active{% endblock %}
+
+
+{% block content %}
     <h3>{{ student.surname }} {{ student.name }}</h3>
       <table>
         <tr><td>дата рождения</td><td>{{ student.date_of_birth }}</td></tr>
@@ -37,4 +23,4 @@
           </td>
         </tr>
       </table>
-  </body>  
+{% endblock content %}
