--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Django course</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/my_style.css">
-    <script src="/static/js/jquery-3.4.1.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    <style type="text/css">
-    </style>
-  </head>
-  <body>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Main</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'contact' %}">Contacts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'students:list_view' %}">Students</a>
-      </li>
-    </ul>
+{% extends "base.html" %}
+
+{% block title %}Список студентов курса{% endblock %}
+
+
+{% block active_students %}active{% endblock %}
+
+
+{% block content %}
     <h3>Список студентов</h3>
       <table>
         <tr>
@@ -40,4 +26,4 @@
         </tr>
         {% endfor %}
       </table>
-  </body>  
+{% endblock content %} 
