--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,17 @@
         {% endif %}
       </li>      
     </ul>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+      <div class="alert alert-success" role="alert">
+        {{ message }}
+      </div>
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% block content %}
 {% endblock content %}
   </body>  
