--- a/templates/courses/add_lesson.html
+++ b/templates/courses/add_lesson.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-{% include "include/main_title_include.html" with block_title='Создание нового занятия' %}
+{% include "include/main_title_include.html" with block_title=title %}
 
 
   <form method='post'>
