--- a/templates/students/remove.html
+++ b/templates/students/remove.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-{% include "include/main_title_include.html" with block_title='Удаление студента' %}
+{% include "include/main_title_include.html" with block_title=title %}
 
   Студент {{ student }} будет удален!
   <form method='post'>
