--- a/templates/students/add.html
+++ b/templates/students/add.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-{% include "include/main_title_include.html" with block_title='Добавление нового студента' %}
+{% include "include/main_title_include.html" with block_title=title %}
 
 
   <form method='post'>
